
*** Document-centred mechanisms added:
    - output retained for script buffer popups
    - background colouring for locked region can be disabled
    - auto raise of prover output buffers can be disabled
    Depending on input language and interaction output, this
    may enable a "document centred" way of working, when output
    buffers can be ignored and hidden. 
    Use full annotation to keep output when several steps are taken.

*** Improved prevention of Undo in locked region
    proof-allow-undo-in-read-only: now defaults to nil

*** Simplified version of comint now used for proof shell
    To improve efficiency, a cut-down version of comint is now used.
    This means that the editing, history and decoration inside the
    proof shell (*coq*, *isabelle*, etc) are impoverished
    compared with PG 3.X.

*** New user configuration options
    proof-auto-raise-buffers  (set to nil for manual control)
    proof-full-decoration     (add full decoration to input)

*** Removed user configuration options
    proof-toolbar-use-button-enablers  (now always used)
    proof-output-fontify-enable        (now always enabled)

*** Altered prover configuration settings
    pg-insert-output-as-comment-fn: removed
    proof-shell-wakeup-char: removed
    proof-shell-prompt-pattern: removed
    proof-shell-strip-output-markup: required for cut-and-paste
    proof-electric-terminator-noterminator: allows non-insert of terminator

*** Primary distribution formats changed
    The RPM and zip file formats have been removed.
    We are very grateful to third-party packagers for Debian and Fedora
    for distributing packaged versions of PG.

** Isabelle/Isar changes

*** Electric terminator works without inserting terminator

*** Line numbers reported during script management

*** Sync problems with bad input prevented by command wrapping

*** Isabelle Settings now organised in sub-menus


** Coq changes

*** Holes mode can be turned on/off
