@@ -36,10 +36,11 @@
     proof-toolbar-use-button-enablers  (now always used)
     proof-output-fontify-enable        (now always enabled)
 
-*** Altered prover configuration settings
+*** Altered prover configuration settings (internal)
     pg-insert-output-as-comment-fn: removed
     proof-shell-wakeup-char: removed
     proof-shell-prompt-pattern: removed
+    pg-use-specials-for-fontify: removed
     proof-shell-strip-output-markup: required for cut-and-paste
     proof-electric-terminator-noterminator: allows non-insert of terminator
 
